# python-disk-collections

./: .coveragerc  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: pull_request.yaml
diskcollections/: clients.py  generators.py  handlers.py  interfaces.py  iterables.py  py2to3.py  serializers.py
diskcollections/iterables/: __init__.py  clients.py  iterables.py
src/diskcollections/: interfaces.py  py2to3.py  serializers.py
src/diskcollections/iterables/: __init__.py  clients.py  iterables.py
tests/: conftest.py  test_clients.py  test_examples.py  test_generators.py  test_handlers.py  test_iterables.py  test_serializers.py
tests/sequences/: test_clients.py  test_iterables.py
