[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diskcollections"]
include = [
  "src/*.py"
]

[project]
name = "python-disk-collections"
version = "0.1.0"
description = "Module contains class with extended python list that stores items at disk."
authors = [
    {name = "Andrzej",email = "6695650+thegrymek@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.rst"
keywords = [
    "pickle", "cache", "collections", "list", "deque", "json", "zlib", "disk",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
]
requires-python = ">=3.8,<4.0"

[project.urls]
Repository = "https://github.com/thegrymek/python-disk-collections"
Releases = "https://github.com/thegrymek/python-disk-collections/releases"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "tox>=3.28.0",
    "tox-uv>=1.13.1",
    { include-group = "lint" }
]
lint = [
    "ruff>=0.11.2",
]

[tool.ruff]
target-version = "py313"
line-length = 79
fix = true

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true
